[CRD iOS] Fix layout issue of the cancel button on iPhone X

The cancel button on the navigation bar is currently overlapping the
notch on the top of the screen on iPhone X. The issue is that we didn't
make the navigation bar respect to the safe area when laying it out.

This CL fixes this by laying out the navigation bar on the top of the
safe area rather than on the top of the view.

Bug: 820547
Change-Id: I41494d01ab7f12a00b8a5bd4f3523245d3362e60
Reviewed-on: https://chromium-review.googlesource.com/957132
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542243}
Former-commit-id: 948041c167dd728589bd28b3741680d4702687ec